# Bezier

./: .gitignore  CMakeLists.txt  Readme.md  build.sh
src/: bezier.cc  bezier.h  components.cc  components.h  display.cc  display.h  main.cc  scroller.cc  scroller.h  storage.cc  storage.h
